# Personalized-Federated-Learning-for-Privacy-Aware-Collaborative-Filtering-in-Recommender-Systems

./: .gitignore  README.md  centralize_baseline_ncf.py  centralized_baseline_svd.ipynb  requirements.txt
federated-adaptive-personalized-cf/: README.md  claude.md  pyproject.toml  run_fusion_experiments.sh  sweep.yaml  test_dataset.py  test_models.py  visualize_partitions.py
federated-adaptive-personalized-cf/adaptive-alpha-plan-references/: adaptive-alpha-model.py  adaptive_alpha.py  adaptive_alpha_bpr_fedmf_plan.md  evaluation-config.py
federated-adaptive-personalized-cf/federated_adaptive_personalized_cf/: client_app.py  dataset.py  early_stopping.py  server_app.py  strategy.py  task.py
federated-adaptive-personalized-cf/federated_adaptive_personalized_cf/evaluation/: __init__.py  alpha_analysis.py  user_groups.py
federated-adaptive-personalized-cf/federated_adaptive_personalized_cf/models/: __init__.py  adaptive_alpha.py  basic_mf.py  bpr_mf.py  dual_personalized_bpr_mf.py
federated-adaptive-personalized-cf/figures/: partition_summary_alpha_0.1.csv  partition_summary_alpha_0.5.csv
federated-adaptive-personalized-cf/scripts/: run_fedprox_sweep.sh  run_wandb_sweep.py  sweep_commands.sh
federated-adaptive-personalized-cf/wandb/: latest-run
federated-adaptive-personalized-cf/wandb/run-20251231_155513-qysv9xdy/: run-qysv9xdy.wandb
federated-adaptive-personalized-cf/wandb/run-20251231_155513-qysv9xdy/files/: config.yaml  wandb-metadata.json
federated-adaptive-personalized-cf/wandb/run-20260109_225502-1peh2qxm/: run-1peh2qxm.wandb
federated-adaptive-personalized-cf/wandb/run-20260109_225502-1peh2qxm/files/: config.yaml  wandb-metadata.json
federated-adaptive-personalized-cf/wandb/run-20260109_225710-i72ef48g/: run-i72ef48g.wandb
federated-adaptive-personalized-cf/wandb/run-20260109_225710-i72ef48g/files/: config.yaml  wandb-metadata.json
federated-adaptive-personalized-cf/wandb/run-20260109_225936-vpfln0sz/: run-vpfln0sz.wandb
federated-adaptive-personalized-cf/wandb/run-20260109_225936-vpfln0sz/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
federated-adaptive-personalized-cf/wandb/run-20260109_231401-c3vpmdum/: run-c3vpmdum.wandb
federated-adaptive-personalized-cf/wandb/run-20260109_231401-c3vpmdum/files/: config.yaml  wandb-metadata.json  wandb-summary.json
federated-adaptive-personalized-cf/wandb/run-20260110_000359-6g1izepb/: run-6g1izepb.wandb
federated-adaptive-personalized-cf/wandb/run-20260110_000359-6g1izepb/files/: config.yaml  wandb-metadata.json  wandb-summary.json
federated-adaptive-personalized-cf/wandb/run-20260111_095436-tjozpzoc/files/: wandb-metadata.json
federated-adaptive-personalized-cf/wandb/run-20260111_095512-veisegxv/: run-veisegxv.wandb
federated-adaptive-personalized-cf/wandb/run-20260111_095512-veisegxv/files/: config.yaml  wandb-metadata.json  wandb-summary.json
federated-adaptive-personalized-cf/wandb/run-20260111_124004-ceh5ajvw/: run-ceh5ajvw.wandb
federated-adaptive-personalized-cf/wandb/run-20260111_124004-ceh5ajvw/files/: config.yaml  wandb-metadata.json  wandb-summary.json
federated-adaptive-personalized-cf/wandb/run-20260111_162924-b5y0q8td/: run-b5y0q8td.wandb
federated-adaptive-personalized-cf/wandb/run-20260111_183310-vf14glir/: run-vf14glir.wandb
federated-adaptive-personalized-cf/wandb/run-20260111_184115-5bumzqf0/: run-5bumzqf0.wandb
federated-adaptive-personalized-cf/wandb/run-20260111_202410-zed0pq0u/: run-zed0pq0u.wandb
federated-adaptive-personalized-cf/wandb/run-20260112_092107-6uhuy0jv/: run-6uhuy0jv.wandb
federated-adaptive-personalized-cf/wandb/run-20260112_093850-uupkb9pp/: run-uupkb9pp.wandb
federated-adaptive-personalized-cf/wandb/run-20260112_115340-zh8vcgcj/: run-zh8vcgcj.wandb
federated-adaptive-personalized-cf/wandb/run-20260112_134855-o86ngf5i/: run-o86ngf5i.wandb
federated-adaptive-personalized-cf/wandb/run-20260112_161619-oi7jk824/: run-oi7jk824.wandb
federated-adaptive-personalized-cf/wandb/run-20260113_172835-1x940kwe/: run-1x940kwe.wandb
federated-adaptive-personalized-cf/wandb/run-20260123_005819-ogbp51wn/: run-ogbp51wn.wandb
federated-adaptive-personalized-cf/wandb/run-20260123_005911-w7ojkx5o/: run-w7ojkx5o.wandb
federated-adaptive-personalized-cf/wandb/run-20260123_010011-kwnm1rri/: run-kwnm1rri.wandb
federated-adaptive-personalized-cf/wandb/run-20260123_010157-2iyxekmb/: run-2iyxekmb.wandb
federated-adaptive-personalized-cf/wandb/run-20260123_010343-gh3jv5kd/: run-gh3jv5kd.wandb
federated-adaptive-personalized-cf/wandb/run-20260123_010529-kkwigwdo/: run-kkwigwdo.wandb
federated-adaptive-personalized-cf/wandb/run-20260123_010929-hcytd4q3/: run-hcytd4q3.wandb
federated-adaptive-personalized-cf/wandb/run-20260123_011157-6pxq0fkj/: run-6pxq0fkj.wandb
federated-adaptive-personalized-cf/wandb/sweep-3pwigaoc/: config-2iyxekmb.yaml  config-gh3jv5kd.yaml  config-kkwigwdo.yaml  config-kwnm1rri.yaml  config-ogbp51wn.yaml  config-zr3e2ntu.yaml
federated-adaptive-personalized-cf/wandb/sweep-hrzksg68/: config-ewfwz7ss.yaml  config-hcytd4q3.yaml
federated-adaptive-personalized-cf/wandb/sweep-yuyj2elc/: config-1qvc9vos.yaml  config-4arojn0a.yaml  config-dvy569ti.yaml  config-sr9q4db8.yaml  config-u1ztfmo9.yaml  config-zjk4mvcj.yaml
federated-baseline-cf/: claude.md  pyproject.toml
federated-baseline-cf/federated_baseline_cf/: client_app.py  dataset.py  server_app.py  task.py
federated-baseline-cf/federated_baseline_cf/models/: basic_mf.py  bpr_mf.py
federated-baseline-cf/wandb/: latest-run
federated-baseline-cf/wandb/run-20251223_172039-0s3d926k/: run-0s3d926k.wandb
federated-baseline-cf/wandb/run-20251223_172502-p2m1q7j7/: run-p2m1q7j7.wandb
federated-baseline-cf/wandb/run-20251223_221652-pbaz0rcy/: run-pbaz0rcy.wandb
federated-baseline-cf/wandb/run-20251223_233317-mrflg5dx/: run-mrflg5dx.wandb
federated-baseline-cf/wandb/run-20251228_194956-dkg4doqk/: run-dkg4doqk.wandb
federated-baseline-cf/wandb/run-20251228_224817-i3avc0v8/: run-i3avc0v8.wandb
federated-personalized-cf/: README.md  (+3 more)
(+128 files in other folders)
