# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federated-baseline-cf"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "DangVinh"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "federated_baseline_cf.server_app:app"
clientapp = "federated_baseline_cf.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
# Federated Learning parameters
num-server-rounds = 10
fraction-train = 1.0
local-epochs = 5

# Model parameters
model-type = "basic"  # Options: "basic" (MSE) or "bpr" (Bayesian Personalized Ranking)
embedding-dim = 128  # Latent factor dimensionality (32, 64, 128, 256)
dropout = 0.1       # Dropout rate for regularization

# Training parameters
lr = 0.005          # Learning rate (Adam optimizer)
weight-decay = 1e-5 # L2 regularization strength
num-negatives = 1   # Number of negative samples per positive (for BPR only)

# Data partitioning
alpha = 0.5         # Dirichlet concentration parameter (lower = more non-IID)

# Ranking evaluation
enable-ranking-eval = true        # Enable comprehensive ranking metrics evaluation
ranking-k-values = "5,10,20"      # K values for Hit Rate, Precision, Recall, NDCG metrics (comma-separated)

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation (CPU-only)
[tool.flwr.federations.local-simulation]
options.num-supernodes = 5

# GPU-enabled simulation federation (requires PyTorch with CUDA support)
# Run with: flwr run . local-sim-gpu
[tool.flwr.federations.local-sim-gpu]
options.num-supernodes = 5
options.backend.client-resources.num-cpus = 12
options.backend.client-resources.num-gpus = 0.2

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
